--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  color: white;
+  color: black;
   padding: 20px;
 }
 
