--- a/src/Components/MovieListFolder/MovieList.css
+++ b/src/Components/MovieListFolder/MovieList.css
@@ -4,3 +4,74 @@
     gap: 20px;
     justify-content: center;
 }
+
+/* Load More Button*/
+.load-more-button {
+    align-items: center;
+    background-color: #f0f0f0;
+    border-radius: 24px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 2px 4px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-sizing: border-box;
+    color: #000;
+    height: 50px;
+    justify-content: center;
+    padding: 2px 24px;
+    position: relative;
+    text-align: center;
+    margin: 0px 0px 20px 0px;
+}
+
+.load-more-button:hover {
+    background: #F6F9FE;
+    color: #8d1aaa;
+}
+
+.load-more-button:active {
+    box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+    outline: none;
+}
+
+
+.material-symbols-outlined {
+    
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 600,
+    'GRAD' 0,
+    'opsz' 40;
+
+    font-size: 54px;
+}
+
+.searchButton {
+    background-color: rgba(255, 255, 255, 0);
+    color: #fff;
+    border: none;
+    
+}
+
+.searchButton:hover {
+    background-color: rgba(255, 255, 255, 0);
+    color: #8d1aaa;
+}
+
+.searchContainer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 0px 20px 20px 20px;
+    /* display: none; */
+}
+
+.searchBar {
+    border-radius: 15px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 2px 4px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-sizing: border-box;
+    color: #000;
+    height: 40px;
+    padding: 2px 24px;
+    text-align: center;
+
+}
