--- a/src/Components/MovieCard/MovieCard.css
+++ b/src/Components/MovieCard/MovieCard.css
@@ -5,6 +5,8 @@
     border-radius: 8px;
     width: 325px;
     margin: 20px;
+    transition: all 0.4s;
+    
 }
 
 .movie-card img {
@@ -12,3 +14,7 @@
     object-fit: cover;
 }
 
+.movie-card:hover {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transform: translateY(-10px);
+}
