--- a/src/Components/MovieCard/MovieCard.css
+++ b/src/Components/MovieCard/MovieCard.css
@@ -1,7 +1,8 @@
 .movie-card {
     background-color: #f0f0f0;
     overflow: hidden;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); */
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 5px -1px,rgba(255, 255, 255, .14) 0 2px 4px 0,rgba(255, 255, 255, .12) 0 1px 18px 0;
     border-radius: 8px;
     width: 325px;
     margin: 20px;
