--- a/src/Components/MovieListFolder/MovieList.css
+++ b/src/Components/MovieListFolder/MovieList.css
@@ -11,7 +11,7 @@
     background-color: #f0f0f0;
     border-radius: 24px;
     border-style: none;
-    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 2px 4px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 5px -1px,rgba(255, 255, 255, .14) 0 2px 4px 0,rgba(255, 255, 255, .12) 0 1px 18px 0;
     box-sizing: border-box;
     color: #000;
     height: 50px;
@@ -32,7 +32,61 @@
     outline: none;
 }
 
+/* Dropdownnn */
+.dropbtn {
+    background-color: rgba(255, 255, 255, .2);
+    color: white;
+    font-weight: normal;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 5px -1px,rgba(255, 255, 255, .14) 0 2px 4px 0,rgba(255, 255, 255, .12) 0 1px 18px 0;
+    height: 45px;
+    width: 130px;
+    margin-bottom: 0;
+    text-align: center;
+}
 
+.dropdown {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin-left: 20px;
+    align-items: center;
+    
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    top: 100%;
+    z-index: 1;
+    border-radius: 8px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    
+}
+
+.dropdown-content a:hover {background-color: rgba(141, 26, 170, .2)
+    ;}
+
+  /* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: rgba(255, 255, 255, .2);}
+
+
+/* Searchingggg */
 .material-symbols-outlined {
     
     font-variation-settings:
@@ -41,7 +95,6 @@
     'GRAD' 0,
     'opsz' 40;
 
-    font-size: 54px;
 }
 
 .searchButton {
@@ -51,6 +104,11 @@
     
 }
 
+.searchButton span {
+    font-size: 35px;
+    margin-top: 7px;
+}
+
 .searchButton:hover {
     background-color: rgba(255, 255, 255, 0);
     color: #8d1aaa;
@@ -58,20 +116,26 @@
 
 .searchContainer {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: space-between;
+    /* align-items: center; */
     margin: 0px 20px 20px 20px;
     /* display: none; */
+    
 }
-
 .searchBar {
-    border-radius: 15px;
+    border-radius: 8px;
     border-style: none;
-    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 2px 4px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 5px -1px,rgba(255, 255, 255, .14) 0 2px 4px 0,rgba(255, 255, 255, .12) 0 1px 18px 0;
     box-sizing: border-box;
-    color: #000;
-    height: 40px;
+    color: #fff;
+    height: 35px;
     padding: 2px 24px;
     text-align: center;
+    background-color: rgba(255, 255, 255, .2);
+    /* align-items: center; */
+}
 
+.search-elements {
+    display: flex;
+    align-items: center;
 }
