--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,23 +1,21 @@
 .navBar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     padding: 0 20px;
     color: #fff;
 }
 
-/* .navBar ul {
+.navBar ul {
     display: flex;
-    justify-content: flex-end;
-    list-style: none;
     width: 50%;
     padding: 0;
-
-} */
+    justify-content: center;
+}
 
 .nav-link {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 20px;
     text-transform: uppercase;
     text-decoration: none;
     color: #fff;
