--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -25,7 +25,7 @@
     max-width: 500px;
     padding: 20px;
     
-    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 2px 4px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 50px -1px,rgba(0, 0, 0, .14) 0 2px 40px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
 
     justify-content: center;
     
@@ -33,9 +33,25 @@
     margin: 0px 0px 20px 0px;
 }
 
+
+@import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
+
 .modal-header {
     display: flex;
     justify-content: flex-end;
+}
+
+.modal-header button {
+    border-radius: 10px;
+}
+
+h2 {
+    font-family: 'Rancho', cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 5px;
 }
 
 .modal-body {
