--- a/src/Components/MovieCard/MovieCard.css
+++ b/src/Components/MovieCard/MovieCard.css
@@ -16,6 +16,7 @@
 }
 
 .movie-card:hover {
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 4px 8px rgba(255, 255, 255, 0.2); */
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 50px -1px,rgba(255, 255, 255, .14) 0 2px 40px 0,rgba(255, 255, 255, .12) 0 1px 180px 0;
     transform: translateY(-10px);
 }
