--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -36,3 +36,9 @@
     text-decoration: none;
     font-weight: bold;
 }
+
+.social-media-icons {
+    display: flex;
+    justify-content: space-evenly;
+}
+
